# Send_file_to_server_application

./: CMakeLists.txt  README.md  build.sh
Client/: CMakeLists.txt  client.c  client.h  main.c
Server/: CMakeLists.txt  main.c  server.c  server.h
